1.10/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: shared-volume
          emptyDir: {}
      containers:
        - name: writer
          image: rjantp/kubernetessubmissions:ex1.10w
          volumeMounts:
          - name: shared-volume
            mountPath: /var/tmp
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
        - name: reader
          image: rjantp/kubernetessubmissions:ex1.10r
          volumeMounts:
          - name: shared-volume
            mountPath: /var/tmp
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
